[#2020] Reject unknown properties in Credentials Management endpoint
Added explicit error handling in case of failure to process requests.
Improved integration tests.
Improved credentials and secret data objects to implicitly check
constraints on property values during de-serialization/instantiation.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>